--- a/resume-angular/src/index.html
+++ b/resume-angular/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang="en">
 <head>  
 <meta charset="utf-8">  
-<title>Angular Bootstrap 4 Examples</title>  <base href="/">  
+<title>Michael Kasper | Home</title>  <base href="/">  
 <meta name="viewport" content="width=device-width, initial-scale=1">  
 <link rel="icon" type="image/x-icon" href="favicon.ico">  
 <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
@@ -10,7 +10,9 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">  
-<app-root></app-root>  
+<app-root></app-root> 
+
+
 <script src="../node_modules/jquery/dist/jquery.js"></script>  <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>    
 </body>
 </html>
